<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CinemaApp</string>
    <string name="cinemas_section">Cinemas</string>
    <string name="movies_section">Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email">Email</string>
    <string name="signup_invalid_inputs_message">The username, password and email fields can not be empty</string>
    <string name="dialog_error_title">Opaa!</string>
    <string name="login_invalid_inputs_message">The username and password fields can not be empty</string>
    <string name="logout">Logout</string>
    <string name="cinema_name">Cinema Name</string>
    <string name="movie_name">Movie Name</string>
    <string name="title_activity_cinema_detail">CinemaDetailActivity</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="address">Address</string>
    <string name="working_time">Working Time</string>
    <string name="movies_available">Movies Available</string>
    <string name="clear">CLEAR</string>
    <string name="cast">Cast</string>
    <string name="available_seat_label">Available Seats:</string>
    <string name="available_seat_sample">100</string>
    <string name="order_info">!Click on the cinema to order</string>
    <string name="cancel">Cancel</string>
    <string name="reserve">Reserve</string>
    <string name="tickets_quantity_order">Enter the quantity of tickets you want to order</string>
    <string name="invalid_order_warning">You can\'t order more than %1$s tickets</string>
    <string name="no_more_tickets">Sorry! No more tickets</string>
    <string name="success_order_message">User %1$s has reserved %2$d tickets for %3$s movie at %4$s cinema!</string>

</resources>
