<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tlnguyen.cinemaapp.activities.SignUpActivity">

    <EditText
        android:id="@+id/etUsername"
        style="@style/MatchParentCenterHorizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/username">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        style="@style/MatchParentCenterHorizontal"
        android:layout_below="@+id/etUsername"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/MatchParentCenterHorizontal"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/MatchParentCenterHorizontal"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:text="@string/signup" />

</RelativeLayout>
