<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tlnguyen.cinemaapp.activities.CinemaDetailActivity">

    <ImageView
        android:id="@+id/ivPhoto1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/ivPhoto2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/ivPhoto1"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/ivPhoto2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/tvWorkingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/working_time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="24dp"
        android:layout_above="@+id/btnMoviesAvailable"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnMoviesAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movies_available"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" />
</RelativeLayout>
